Merged revisions 17233 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.2.x
........
  r17233 | pablo.kraan | 2010-05-12 10:02:39 -0300 (Wed, 12 May 2010) | 6 lines
  
  JmsMessageUtils related changes:
  _Extrating some methods from toMessage method.
  _Replacing mockobjects by mockito in test
  _Replacing real Session by mocks in a couple of tests
  _Adding more tests to toMessage method
........


git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@17422 bf997673-6b11-0410-b953-e057580c5b09