@@ -10,15 +10,21 @@
 
 package org.mule.transport.jms;
 
+import static org.mockito.Matchers.anyObject;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import org.mule.tck.AbstractMuleTestCase;
 import org.mule.tck.testmodels.fruit.BananaFactory;
 import org.mule.tck.testmodels.fruit.Orange;
 
-import com.mockobjects.constraint.IsInstanceOf;
-import com.mockobjects.dynamic.C;
-import com.mockobjects.dynamic.Mock;
-
+import java.io.IOException;
 import java.io.NotSerializableException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -28,7 +34,7 @@ import java.util.List;
 import java.util.Map;
 
 import javax.jms.BytesMessage;
-import javax.jms.ConnectionFactory;
+import javax.jms.JMSException;
 import javax.jms.MapMessage;
 import javax.jms.Message;
 import javax.jms.MessageFormatException;
@@ -37,7 +43,11 @@ import javax.jms.Session;
 import javax.jms.StreamMessage;
 import javax.jms.TextMessage;
 
-import org.apache.activemq.ActiveMQConnectionFactory;
+import org.apache.activemq.command.ActiveMQBytesMessage;
+import org.apache.activemq.command.ActiveMQMapMessage;
+import org.apache.activemq.command.ActiveMQObjectMessage;
+import org.apache.activemq.command.ActiveMQStreamMessage;
+import org.apache.activemq.command.ActiveMQTextMessage;
 import org.apache.commons.collections.IteratorUtils;
 import org.apache.commons.collections.iterators.IteratorEnumeration;
 
@@ -62,198 +72,277 @@ public class JmsMessageUtilsTestCase extends AbstractMuleTestCase
 
     public void testTextMessageNullContent() throws Exception
     {
-        Mock mockMessage = new Mock(TextMessage.class);
-        mockMessage.expectAndReturn("getText", null);
+        TextMessage mockMessage = mock(TextMessage.class);
+        when(mockMessage.getText()).thenReturn(null);
 
-        TextMessage mockTextMessage = (TextMessage) mockMessage.proxy();
-
-        byte[] result = JmsMessageUtils.toByteArray(mockTextMessage, JmsConstants.JMS_SPECIFICATION_102B, ENCODING);
+        byte[] result = JmsMessageUtils.toByteArray(mockMessage, JmsConstants.JMS_SPECIFICATION_102B,
+            ENCODING);
         assertNotNull(result);
         assertEquals("Should return an empty byte array.", 0, result.length);
 
-        mockMessage.verify();
+        verify(mockMessage).getText();
     }
 
-    public void testByteMessageNullContent() throws Exception
+    public void testByteMessageNullContentInJmsVersion_1_0_1() throws Exception
     {
-        // test for JMS 1.0.2-compliant code path
-        Mock mockMessage = new Mock(BytesMessage.class);
-        mockMessage.expect("reset");
-        mockMessage.expectAndReturn("readBytes", new IsInstanceOf(byte[].class), -1);
-        BytesMessage mockBytesMessage = (BytesMessage) mockMessage.proxy();
+        BytesMessage mockMessage1 = mock(BytesMessage.class);
+        when(mockMessage1.readBytes((byte[]) anyObject())).thenReturn(-1);
 
-        byte[] result = JmsMessageUtils.toByteArray(mockBytesMessage, JmsConstants.JMS_SPECIFICATION_102B, ENCODING);
-        assertNotNull(result);
-        assertEquals("Should return an empty byte array.", 0, result.length);
-        mockMessage.verify();
+        byte[] result1 = JmsMessageUtils.toByteArray(mockMessage1, JmsConstants.JMS_SPECIFICATION_102B,
+            ENCODING);
+        assertNotNull(result1);
+        assertEquals("Should return an empty byte array.", 0, result1.length);
+        verify(mockMessage1).reset();
+    }
 
-        // test for JMS 1.1-compliant code path
-        mockMessage = new Mock(BytesMessage.class);
-        mockMessage.expect("reset");
-        mockMessage.expectAndReturn("getBodyLength", new Long(0));
-        mockBytesMessage = (BytesMessage) mockMessage.proxy();
+    public void testByteMessageNullContentInJmsVersion_1_1() throws Exception
+    {
+        BytesMessage mockMessage2 = mock(BytesMessage.class);
+        when(mockMessage2.getBodyLength()).thenReturn(Long.valueOf(0));
 
-        result = JmsMessageUtils.toByteArray(mockBytesMessage, JmsConstants.JMS_SPECIFICATION_11, ENCODING);
-        assertNotNull(result);
-        assertEquals("Should return an empty byte array.", 0, result.length);
-        mockMessage.verify();
+        byte[] result2 = JmsMessageUtils.toByteArray(mockMessage2, JmsConstants.JMS_SPECIFICATION_11,
+            ENCODING);
+        assertNotNull(result2);
+        assertEquals("Should return an empty byte array.", 0, result2.length);
+        verify(mockMessage2).reset();
     }
 
     public void testStreamMessageSerialization() throws Exception
     {
-        Session session = null;
-        try
-        {
-            // get a live session
-            ConnectionFactory cf = new ActiveMQConnectionFactory("vm://localhost?broker.persistent=false&broker.useJmx=false");
-            session = cf.createConnection().createSession(false, Session.AUTO_ACKNOWLEDGE);
+        Session session = mock(Session.class);
+        when(session.createStreamMessage()).thenReturn(new ActiveMQStreamMessage());
 
-            // create a test list with data
-            List data = new ArrayList();
-            data.add(new Object());
+        // Creates a test list with data
+        List data = new ArrayList();
+        data.add(Boolean.TRUE);
+        data.add(new Byte("1"));
+        data.add(new Short("2"));
+        data.add(new Character('3'));
+        data.add(new Integer("4"));
+        // can't write Longs: https://issues.apache.org/activemq/browse/AMQ-1965
+        // data.add(new Long("5"));
+        data.add(new Float("6"));
+        data.add(new Double("7"));
+        data.add(new String("8"));
+        data.add(new byte[]{9, 10});
 
-            // test the invalid input
-            try
-            {
-                JmsMessageUtils.toMessage(data, session);
-                fail("Should've failed with MessageFormatException");
-            }
-            catch (MessageFormatException e)
-            {
-                // expected
-            }
+        StreamMessage result = (StreamMessage) JmsMessageUtils.toMessage(data, session);
 
-
-            // test valid types
-            data.clear();
-            data.add(Boolean.TRUE);
-            data.add(new Byte("1"));
-            data.add(new Short("2"));
-            data.add(new Character('3'));
-            data.add(new Integer("4"));
-            // can't write Longs: https://issues.apache.org/activemq/browse/AMQ-1965
-            //data.add(new Long("5"));
-            data.add(new Float("6"));
-            data.add(new Double("7"));
-            data.add(new String("8"));
-            data.add(new byte[] {9, 10});
-
-
-            StreamMessage result = (StreamMessage) JmsMessageUtils.toMessage(data, session);
-            // reset so it's readable
-            result.reset();
-
-            assertEquals(Boolean.TRUE, result.readObject());
-            assertEquals(new Byte("1"), result.readObject());
-            assertEquals(new Short("2"), result.readObject());
-            assertEquals(new Character('3'), result.readObject());
-            assertEquals(new Integer("4"), result.readObject());
-            // can't write Longs: https://issues.apache.org/activemq/browse/AMQ-1965
-            //assertEquals(new Long("5"), result.readObject());
-            assertEquals(new Float("6"), result.readObject());
-            assertEquals(new Double("7"), result.readObject());
-            assertEquals(new String("8"), result.readObject());
-
-            assertTrue(Arrays.equals(new byte[] {9, 10}, (byte[]) result.readObject()));
-
-
-        }
-        finally
-        {
-            if (session != null)
-            {
-                session.close();
-            }
-        }
+        // Resets so it's readable
+        result.reset();
+        assertEquals(Boolean.TRUE, result.readObject());
+        assertEquals(new Byte("1"), result.readObject());
+        assertEquals(new Short("2"), result.readObject());
+        assertEquals(new Character('3'), result.readObject());
+        assertEquals(new Integer("4"), result.readObject());
+        // can't write Longs: https://issues.apache.org/activemq/browse/AMQ-1965
+        // assertEquals(new Long("5"), result.readObject());
+        assertEquals(new Float("6"), result.readObject());
+        assertEquals(new Double("7"), result.readObject());
+        assertEquals(new String("8"), result.readObject());
+        assertTrue(Arrays.equals(new byte[]{9, 10}, (byte[]) result.readObject()));
     }
 
-    public void testMapMessageSerialization() throws Exception
+    public void testStreamMessageSerializationWithInvalidType() throws Exception
     {
         Session session = null;
+        session = mock(Session.class);
+        when(session.createStreamMessage()).thenReturn(new ActiveMQStreamMessage());
+
+        // Creates a test list with data
+        List data = new ArrayList();
+        data.add(new Object());
+
         try
         {
-            // get a live session
-            ConnectionFactory cf = new ActiveMQConnectionFactory("vm://localhost?broker.persistent=false&broker.useJmx=false");
-            session = cf.createConnection().createSession(false, Session.AUTO_ACKNOWLEDGE);
-
-            // create a test Map with data
-            Map data = new HashMap();
-            data.put("value1", new Float(4));
-            data.put("value2", new byte[]{1,2,3});
-            data.put("value3", "value3");
-            data.put("value4", new Double(67.9));
-            data.put("value5", true);
-
-            Message message = JmsMessageUtils.toMessage(data, session);
-            assertTrue(message instanceof MapMessage);
-
-            MapMessage mapMessage = (MapMessage)message;
-            assertEquals(new Float(4), mapMessage.getFloat("value1"));
-            assertTrue(Arrays.equals(new byte[]{1,2,3}, mapMessage.getBytes("value2")));
-            assertEquals("value3", mapMessage.getString("value3"));
-            assertEquals(new Double(67.9), mapMessage.getDouble("value4"));
-            assertTrue(mapMessage.getBoolean("value5"));
-
-            //Lets add a non-primitive object to the map, we should now get and Object message
-            data.put("orange", new Orange());
-
-            message = JmsMessageUtils.toMessage(data, session);
-            assertTrue(message instanceof ObjectMessage);
-
-            ObjectMessage objectMessage = (ObjectMessage)message;
-            Map values = (Map)objectMessage.getObject();
-
-            assertEquals(new Float(4), values.get("value1"));
-            assertTrue(Arrays.equals(new byte[]{1,2,3}, (byte[])values.get("value2")));
-            assertEquals("value3", values.get("value3"));
-            assertEquals(new Double(67.9), values.get("value4"));
-            assertTrue((Boolean)values.get("value5"));
-            assertEquals(new Orange(), values.get("orange"));
-
-            //Finally lets add an non-serializable object
-            data.put("notserializable", new BananaFactory());
-
-            try
-            {
-                message = JmsMessageUtils.toMessage(data, session);
-                fail("attempt to send a non-serializable object in a map should fail");
-            }
-            catch (Exception e)
-            {
-                //exprected
-                assertTrue(e.getCause() instanceof NotSerializableException);
-            }
-
+            JmsMessageUtils.toMessage(data, session);
+            fail("Should've failed with MessageFormatException");
         }
-        finally
+        catch (MessageFormatException e)
         {
-            if (session != null)
-            {
-                session.close();
-            }
+            // expected
         }
     }
-    
+
     public void testMapMessageWithNullValue() throws Exception
     {
-        String[] keys = new String[] { "key", "null" };
+        String[] keys = new String[]{"key", "null"};
         Iterator<String> keyIterator = IteratorUtils.arrayIterator(keys);
         Enumeration<String> keyEnumeration = new IteratorEnumeration(keyIterator);
-        
-        Mock mockMessage = new Mock(MapMessage.class);
-        mockMessage.expectAndReturn("getMapNames", keyEnumeration);
-        mockMessage.expectAndReturn("getObject", C.eq("key"), "value");
-        mockMessage.expectAndReturn("getObject", C.eq("null"), null);
-        MapMessage message = (MapMessage) mockMessage.proxy();
-        
-        Object result = JmsMessageUtils.toObject(message, JmsConstants.JMS_SPECIFICATION_11, ENCODING);
+
+        MapMessage mockMessage1 = mock(MapMessage.class);
+        when(mockMessage1.getMapNames()).thenReturn(keyEnumeration);
+        when(mockMessage1.getObject("key")).thenReturn("value");
+        when(mockMessage1.getObject("null")).thenReturn(null);
+
+        Object result = JmsMessageUtils.toObject(mockMessage1, JmsConstants.JMS_SPECIFICATION_11, ENCODING);
         assertNotNull(result);
         assertTrue(result instanceof Map);
         Map map = (Map) result;
         assertEquals("value", map.get("key"));
         assertNull(map.get("null"));
-
-        mockMessage.verify();
     }
 
+    /**
+     * Tests that is able to convert a Map which only contains simple values into a
+     * MapMessage.
+     */
+    public void testConvertsValidMapWithSimpleValuesToMapMessage() throws JMSException
+    {
+        Session session = mock(Session.class);
+        when(session.createMapMessage()).thenReturn(new ActiveMQMapMessage());
+
+        // Creates a test Map with data
+        Map data = new HashMap();
+        data.put("value1", new Float(4));
+        data.put("value2", new byte[]{1, 2, 3});
+        data.put("value3", "value3");
+        data.put("value4", new Double(67.9));
+        data.put("value5", true);
+
+        Message message = JmsMessageUtils.toMessage(data, session);
+        assertTrue(message instanceof MapMessage);
+
+        MapMessage mapMessage = (MapMessage) message;
+        assertEquals(new Float(4), mapMessage.getFloat("value1"));
+        assertTrue(Arrays.equals(new byte[]{1, 2, 3}, mapMessage.getBytes("value2")));
+        assertEquals("value3", mapMessage.getString("value3"));
+        assertEquals(new Double(67.9), mapMessage.getDouble("value4"));
+        assertTrue(mapMessage.getBoolean("value5"));
+    }
+
+    /**
+     * Tests that is able to convert a Map which contains a serializable value into
+     * an ObjectMessage.
+     */
+    public void testConvertsMapWithSerializableValueIntoObjectMessage() throws Exception
+    {
+        Session session = mock(Session.class);
+        when(session.createObjectMessage()).thenReturn(new ActiveMQObjectMessage());
+
+        // Creates a test Map containing a serializable object
+        Map data = new HashMap();
+        data.put("orange", new Orange());
+
+        Message message = JmsMessageUtils.toMessage(data, session);
+        assertTrue(message instanceof ObjectMessage);
+
+        ObjectMessage objectMessage = (ObjectMessage) message;
+        Map values = (Map) objectMessage.getObject();
+        assertEquals(new Orange(), values.get("orange"));
+    }
+
+    /**
+     * Tests that trying to convert a Map which contains a non valid non serializable
+     * value throws an exception.
+     */
+    public void testConvertingMapIncludingNotValidNotSerializableValueThrowsException() throws Exception
+    {
+        Session session = mock(Session.class);
+        when(session.createObjectMessage()).thenReturn(new ActiveMQObjectMessage());
+
+        // Creates a test Map containing a non serializable object
+        Map data = new HashMap();
+        data.put("notserializable", new BananaFactory());
+
+        try
+        {
+            JmsMessageUtils.toMessage(data, session);
+            fail("Attempt to send a non-serializable object in a map should fail");
+        }
+        catch (Exception expected)
+        {
+            assertTrue(expected.getCause() instanceof NotSerializableException);
+        }
+    }
+
+    public void testConvertingStringToTextMessage() throws JMSException
+    {
+        String text = "Hello world";
+
+        Session session = mock(Session.class);
+        TextMessage textMessage = new ActiveMQTextMessage();
+        textMessage.setText(text);
+        when(session.createTextMessage(text)).thenReturn(textMessage);
+
+        TextMessage message = (TextMessage) JmsMessageUtils.toMessage(text, session);
+        assertEquals(textMessage, message);
+        verify(session, times(1)).createTextMessage(text);
+    }
+
+    public void testConvertingByteArrayToBytesMessage() throws JMSException
+    {
+        Session session = mock(Session.class);
+        when(session.createBytesMessage()).thenReturn(new ActiveMQBytesMessage());
+
+        byte[] bytesArray = new byte[]{1, 2};
+        BytesMessage message = (BytesMessage) JmsMessageUtils.toMessage(bytesArray, session);
+
+        // Makes the message readable
+        message.reset();
+        byte[] bytesArrayResult = new byte[(int) message.getBodyLength()];
+        int length = message.readBytes(bytesArrayResult);
+        assertEquals(2, length);
+        assertEquals(bytesArray[0], bytesArrayResult[0]);
+        assertEquals(bytesArray[1], bytesArrayResult[1]);
+    }
+
+    public void testConvertingSerializableToObjectMessage() throws JMSException
+    {
+        Session session = mock(Session.class);
+        when(session.createObjectMessage()).thenReturn(new ActiveMQObjectMessage());
+
+        final String OBJECT_ID = "id1234";
+        ObjectMessage message = (ObjectMessage) JmsMessageUtils.toMessage(new SerializableObject(OBJECT_ID),
+            session);
+
+        Serializable serializable = message.getObject();
+        assertTrue(serializable instanceof SerializableObject);
+        assertEquals(OBJECT_ID, ((SerializableObject) serializable).id);
+    }
+
+    public void testConvertingMessageToMessageReturnsSameObject() throws JMSException
+    {
+        Message original = mock(Message.class);
+        Message result = JmsMessageUtils.toMessage(original, null);
+        assertSame(original, result);
+    }
+
+    public void testConvertingInvalidTypeThrowsException() throws JMSException
+    {
+        try
+        {
+            JmsMessageUtils.toMessage(new Object(), null);
+            fail("Able to convert to message an invalid type");
+        }
+        catch (JMSException e)
+        {
+            // Expected
+        }
+    }
+
+    /**
+     * Dummy serializable class used to test that conversion from Map to JmsMessage
+     * is OK when it includes non primitive serializable values.
+     */
+    private static class SerializableObject implements Serializable
+    {
+        private static final long serialVersionUID = -4865136673252075014L;
+        private String id;
+
+        public SerializableObject(String id)
+        {
+            this.id = id;
+        }
+
+        private void readObject(ObjectInputStream aInputStream) throws ClassNotFoundException, IOException
+        {
+            aInputStream.defaultReadObject();
+        }
+
+        private void writeObject(ObjectOutputStream aOutputStream) throws IOException
+        {
+            aOutputStream.defaultWriteObject();
+        }
+    }
 }
